change era + fix state